@startuml

title __VIEWHOLDER's Class Diagram__\n

  namespace com.ocnyang.cartlayoutdemo {
    namespace viewholder {
      abstract class com.ocnyang.cartlayoutdemo.viewholder.ChildViewHolder {
          + textView : TextView
          + textViewAdd : TextView
          + textViewNum : TextView
          + textViewPrice : TextView
          + textViewReduce : TextView
          + ChildViewHolder()
          + onClick()
          {abstract} + onNeedCalculate()
      }
    }
  }
  

  namespace com.ocnyang.cartlayoutdemo {
    namespace viewholder {
      class com.ocnyang.cartlayoutdemo.viewholder.GroupViewHolder {
          + textView : TextView
          + GroupViewHolder()
      }
    }
  }
  

  namespace com.ocnyang.cartlayoutdemo {
    namespace viewholder {
      class com.ocnyang.cartlayoutdemo.viewholder.NormalViewHolder {
          + imgViewClose : ImageView
          + textView : TextView
          + NormalViewHolder()
      }
    }
  }
  

  com.ocnyang.cartlayoutdemo.viewholder.ChildViewHolder .up.|> android.view.View.OnClickListener
  com.ocnyang.cartlayoutdemo.viewholder.ChildViewHolder -up-|> com.ocnyang.cartlayout.viewholder.CartViewHolder
  com.ocnyang.cartlayoutdemo.viewholder.GroupViewHolder -up-|> com.ocnyang.cartlayout.viewholder.CartViewHolder
  com.ocnyang.cartlayoutdemo.viewholder.NormalViewHolder -up-|> com.ocnyang.cartlayout.viewholder.CartViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
